# python-cmdcmd

./: .gitignore  .travis.yml  NEWS.rst  README.rst  noxfile.py  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
changes/: enum.feature  oldpython.removal.rst
cmd/: __init__.py  cmd.py  test.py  util.py
cmdcmd/: __init__.py  cmd.py  util.py
examples/: git.py
src/cmdcmd/: __init__.py  cmd.py
src/cmdcmd.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_cmd.py  test_option.py
