[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
branch = true
parallel = true
relative_files = true
source = ["cmdcmd"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 25

[tool.flakeheaven]
format = "colored"
show_source = true
max_line_length = 120
noqa-require-code = true

[tool.flakeheaven.plugins]
pycodestyle = ["+*", "-E501", "-E722"]
pyflakes = ["+*"]
"flake8-*" = ["+*"]
