[metadata]
name = cmdcmd
version = attr: cmdcmd.__version__
author = Adrian Perez de Castro
author_email = aperez@igalia.com
description = Ergonomic command line interface maker
long_description = file: README.rst
url = https://github.com/aperezdc/python-cmdcmd
classifiers=
	Development Status :: 4 - Beta
	Environment :: Console
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3 :: Only

[options]
python_requires = >=3.5
packages = find:
package_dir =
	=src

[options.packages.find]
where = src
